--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "entrant",
+  "name": "entrant-mb",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "test": "vue-cli-service build --mode test",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
-    "vue": "^2.6.10",
-    "vue-router": "^3.0.3"
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "vant": "^2.2.3",
+    "vue": "^2.5.22",
+    "vue-quill-editor": "^3.0.6",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
@@ -19,6 +25,19 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "postcss-pxtorem": "^4.0.1",
+    "vue-template-compiler": "^2.5.22"
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {},
+      "postcss-pxtorem": {
+        "rootValue": 22,
+        "propList": [
+          "*",
+          "!border-bottom*"
+        ]
+      }
+    }
   }
 }
